Add demo submission call

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -90,8 +90,19 @@
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
-          <h2 id="submissions_open"><a href="https://cmt.research.microsoft.com/IMIC2014"><strong>New: Submissions Accepted until <strike>June 9</strike> June 12, 2014</a></strong></h2>
           <h2>New: $300 Best Paper Award!</h2>
+          <h2>New: <a href="https://cmt.research.microsoft.com/IMIC2014">Call for Demos!  Deadline August 15, 2014</a></h2>
+          <p>We would like to invite you to actively participate at the Interactive Medical Image Computing (IMIC) Workshop <strong>by giving a live demo of your work</strong>.  IMIC is to be held in Boston, on Sunday September 14, in conjunction with MICCAI 2014.</p>
+
+          <p>We received many excellent paper submissions and plan to send notifications of acceptance for the oral and the demo sessions soon.  While the deadline for manuscript submission to the IMIC has passed, there is still an opportunity to take part at the workshop and present your work in demo form.</p>
+
+          <p>The IMIC workshop addresses the topic of human interaction with algorithms for initialization, steering, quality control, and visualization for problem domains such as segmentation and registration, object detection and tracking. </p>
+
+          <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
+
+          <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data. In this call for participation in the demo session of the workshop we ask for 300 words abstract along with a demo or a link to a toolbox.</p>
+
+          <p><strong>Submissions will be handled in an ongoing basis.</strong> We will send an acceptance notification to the demo session within a week of the submission. The latest date to submit a demo is August 15 but please note that we may reach the number of demos we can accommodate earlier.</p>
     </div>
 
     <div class="container marketing">
@@ -103,10 +114,11 @@
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
-<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
-<p>Submission Deadline: <strike>June 9</strike> June 12, 2014 <strong>NOTE: extension!</strong></p>
+<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Demo Submissions Open Until August 15, 2014</a></strong></p>
+<p>Paper Submission Deadline: <strike>June 9</strike> June 12, 2014 </p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
+<p>Demo Submission Deadline: <strike>August 15, 2014</strike> June 12, 2014 </p>
 <p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
           <h3>Day of the Workshop</h3>
           <p>8:30 - Welcome</p>
@@ -192,10 +204,10 @@
 <li>Tina Kapur</li>
 </ul>
 
-<h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Submission Process</h3>
+<h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper Submission Process</h3>
 
 <p>We are using an automated submission management system.</p>
-<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Submissions Now Open</a></strong></p>
+<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Paper Submissions Closed</a></strong></p>
 <p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
 Workshop presentations are expected to represent a cross section of the best available research in this area.
 As this is an emerging field that has not been historically well-covered in the MICCAI literature,
