Fix demo deadline date

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -118,7 +118,7 @@
 <p>Paper Submission Deadline: <strike>June 9</strike> June 12, 2014 </p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
-<p>Demo Submission Deadline: <strike>August 15, 2014</strike> June 12, 2014 </p>
+<p>Demo Submission Deadline: August 15, 2014</p>
 <p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
           <h3>Day of the Workshop</h3>
           <p>8:30 - Welcome</p>
