Extra demo submission info and less redundancy with other page content

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -96,11 +96,9 @@
 
           <p>We received many excellent paper submissions and plan to send notifications of acceptance for the oral and the demo sessions soon.  While the deadline for manuscript submission to the IMIC has passed, there is still an opportunity to take part at the workshop and present your work in demo form.</p>
 
-          <p>The IMIC workshop addresses the topic of human interaction with algorithms for initialization, steering, quality control, and visualization for problem domains such as segmentation and registration, object detection and tracking. </p>
-
           <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
 
-          <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data. In this call for participation in the demo session of the workshop we ask for 300 words abstract along with a demo or a link to a toolbox.</p>
+          <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data. In this call for participation in the demo session of the workshop we ask for 300 words abstract along with a demo or a link to a toolbox. <strong><a href="https://cmt.research.microsoft.com/IMIC2014">Submit your proposal here.</a></strong>  We will provide space for accepted demos, but you must provide your own hardware (laptop preferred).</p> 
 
           <p><strong>Submissions will be handled in an ongoing basis.</strong> We will send an acceptance notification to the demo session within a week of the submission. The latest date to submit a demo is August 15 but please note that we may reach the number of demos we can accommodate earlier.</p>
     </div>
