--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -119,15 +119,16 @@
 <p>Demo Submission Deadline: August 15, 2014</p>
 <p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
           <h3>Day of the Workshop</h3>
-          <p>8:30 - Welcome</p>
-          <p>8:35 - Ron’s Rules for Tools (Ron Kikinis)</p>
-          <p>9:30 - Presentations Block #1</p>
-          <p>10:30 - Coffee and Demos</p>
-          <p>11:30 - Presentations Block #2</p>
-          <p>12:30-1:30 Lunch</p>
-          <p>1:30 - Allen’s Mathematical Theory of Interaction (Allen Tannenbaum)</p>
-          <p>2:30 - Presentations Block #3</p>
-          <p>3:30 - Coffee and Demos</p>
+          <p>7:00 - Coffee</p>
+          <p>8:10 - Welcome</p>
+          <p>8:15 - Ron’s Rules for Tools (Ron Kikinis)</p>
+          <p>9:00 - Presentations Block #1 (4 talks, 15 minutes each)</p>
+          <p>10:00 - Coffee and Demos</p>
+          <p>11:00 - Presentations Block #2 (4 talks, 15 minutes each)</p>
+          <p>12:00 - Lunch</p>
+          <p>1:00 - Allen’s Mathematical Theory of Interaction (Allen Tannenbaum)</p>
+          <p>2:00 - Presentations Block #3 (4 talks, 15 minutes each)</p>
+          <p>3:00 - Coffee and Demos</p>
           <p>4:30 - Presentation of Awards</p>
           <p>5:00 - Adjurn</p>
 
