Add oral presentation list to the page

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -164,6 +164,39 @@
       <section id="main_content" class="inner">
         <h3>
 
+<h3><a name="oral" class="anchor" href="#oral"><span class="octicon octicon-link"></span></a>Oral Presentations</h3>
+
+<ul>
+
+  <li><b>A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem.  </b>Heckel, Frank</li>
+
+  <li><b>Tracking by Assignment Facilitates Data Curation.</b> Jug, Florian</li>
+
+  <li><b>An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut.</b>  Zhu, Liangjia</li>
+
+  <li><b>informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop.</b> Gurari, Danna</li>
+
+  <li><b>mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian</b> (<a href=http://tipix.csail.mit.edu/>online demo</a>)</li>
+
+  <li><b>An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh</b></li>
+
+  <li><b>How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours.  </b>Gurari, Danna</li>
+
+  <li><b>Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. </b>Urschler, Martin</li>
+
+  <li><b>An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). </b>Fetzer, Andreas</li>
+
+  <li><b>Probabilistic model for interactive 3D segmentation.</b> Hershkovich, Tsachi</li>
+
+  <li><b>Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation.</b> Xue, Wenzhe</li>
+
+  <li><b>A Control Framework for Interactive Deformable Image Registration.</b> Kolesov, Ivan</li>
+
+</ul>
+
+
+        <h3>
+
 <h3><a name="organizers" class="anchor" href="#organizers"><span class="octicon octicon-link"></span></a>Organizing Committee</h3>
 
 <ul>
