Add Oral Presentations to menu

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -55,6 +55,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="#organizers">People</a></li>
+                    <li><a href="#oral">Oral Presentations</a></li>
                     <li><a href="#why-imic">Why IMIC</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">External Links</li>
