--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -185,7 +185,7 @@
 
   <li><b>Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. </b>Urschler, Martin</li>
 
-  <li><b>An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). </b>Fetzer, Andreas</li>
+  <li><b>An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). </b>Fetzer, Andreas (<a href=http://mitk.org/>available in MITK Workbench</a>)</li>
 
   <li><b>Probabilistic model for interactive 3D segmentation.</b> Hershkovich, Tsachi</li>
 
