Add workshops schedule and directions

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -90,18 +90,79 @@
           <img src="../images/MICCAI2014-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2014, SEP 14-18, Boston" width="1170">
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
-          <h2 id="project_tagline"><a href=http://miccai2014.org/ target="_blank">MICCAI:</a> September 14, 2014 - Boston, USA</h2>
-          <h2>New: $300 Best Paper Award!</h2>
-          <h2>New: <a href="https://cmt.research.microsoft.com/IMIC2014">Call for Demos!  Deadline August 15, 2014</a></h2>
-          <p>We would like to invite you to actively participate at the Interactive Medical Image Computing (IMIC) Workshop <strong>by giving a live demo of your work</strong>.  IMIC is to be held in Boston, on Sunday September 14, in conjunction with MICCAI 2014.</p>
-
-          <p>We received many excellent paper submissions and plan to send notifications of acceptance for the oral and the demo sessions soon.  While the deadline for manuscript submission to the IMIC has passed, there is still an opportunity to take part at the workshop and present your work in demo form.</p>
+          <h2 id="project_tagline">Part of <a href=http://miccai2014.org/ target="_blank">MICCAI 2014:</a> September 14, 2014 - Boston, USA</h2>
+          <p>The Interactive Medical Image Computing (IMIC) Workshop is to be held in Boston, on Sunday September 14, in conjunction with MICCAI 2014.</p>
 
           <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
 
-          <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data. In this call for participation in the demo session of the workshop we ask for 300 words abstract along with a demo or a link to a toolbox. <strong><a href="https://cmt.research.microsoft.com/IMIC2014">Submit your proposal here.</a></strong>  We will provide space for accepted demos, but you must provide your own hardware (laptop preferred).</p> 
+          <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various demo tools on different data.</p>
 
-          <p><strong>Submissions will be handled in an ongoing basis.</strong> We will send an acceptance notification to the demo session within a week of the submission. The latest date to submit a demo is August 15 but please note that we may reach the number of demos we can accommodate earlier.</p>
+     <h3>Workshop Location</h3>
+
+     Room 217 of the <a href=http://www.theconfcenter.hms.harvard.edu/directions/>Martin Conference Center at Harvard Medical School</a>.
+
+     <h3>Workshop Schedule</h3>
+
+
+     <h4>Oral Session I : Microscopy imaging, Cell tracking, Segmentation</h4>
+
+     <i>Chairs: Tammy Riklin Raviv and Yi Gao</i><br>
+
+     9:00-9:15 Tracking by Assignment Facilitates Data Curation. Jug, Florian<br>
+     9:15-9:30 Informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop. Gurari, Danna<br>
+     9:30-9:45 How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours. Gurari, Danna<br>
+     9:45-10:00 An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). (<a href=http://mitk.org/>available in MITK Workbench</a>) Fetzer, Andreas<br>
+
+<h4>Oral Session II: Segmentation</h4>
+
+<i>Chairs: Steve Pieper and Bjoern Menze</i><br><br>
+
+11:00-11:15 Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation. Xue, Wenzhe<br>
+11:15-11:30 Probabilistic model for interactive 3D segmentation. Hershkovich, Tsachi<br>
+11:30-11:45 A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem. (<a href=http://www.mevis-research.de/~fheckel/IMIC2014/IMIC_Editing.html>movie</a>) Heckel, Frank<br>
+11:45-12:00 An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut. Zhu, Liangjia<br>
+
+<h4>Oral Session III : Visualization/Registration/Denoising</h4>
+
+<i>Chairs: Allen Tannenbaum and Hans-Peter Meinzer</i><br>
+
+14:00-14:15 Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. Urschler, Martin<br>
+14:15-14:30 A Control Framework for Interactive Deformable Image Registration. Kolesov, Ivan<br>
+14:30-15:00 An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh<br>
+14:45-15:00  mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian (<a href=http://tipix.csail.mit.edu/>online demo</a>)<br>
+
+<h4>Demo Session I: 10:00-11:00</h4>
+
+<h5>Part I 10:00-10:30</h5>
+1. An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh<br>
+2. Tracking by Assignment Facilitates Data Curation. Jug, Florian<br>
+3. How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours. Gurari, Danna<br>
+4. An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). Fetzer, Andreas<br>
+5.Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation. Xue, Wenzhe<br>
+
+<h5>Part II: 10:30-11:00</h5>
+6. A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem. Heckel, Frank<br>
+7. Medical image navigation by gesture recognition for Leap Motion Thong, William*<br>
+8. Exploration and validation of time-lapse microscopy images using CellProfiler Tracer Bray, Mark-Anthony<br>
+9. Image-based Interactive Assessment and Therapy Simulation of Aortic Coarctation Hennemuth, Anja<br>
+
+<h4>Demo Session II: 15:00-16:00</h4>
+
+<h5>Part III: 15:00-15:30</h5>
+1. mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian<br>
+2. A Control Framework for Interactive Deformable Image Registration. Kolesov, Ivan<br>
+3. Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. Urschler, Martin<br>
+4. Probabilistic model for interactive 3D segmentation. Hershkovich, Tsachi<br>
+5. An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut. Zhu, Liangjia<br>
+
+<h5>Part IV: 15:30-16:00</h5>
+6. Informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop. Gurari, Danna<br>
+7. Cardiac Image Modeller Right and Left Ventricle Gilbert, Kathleen<br>
+8. inTag, CMRSegToosl and C-DTI. A suite of tools for analysing cardiac MR images. Romero R., William A.<br>
+9. MIRAN - An Interactive Image Segmentation and Meshing Environment Borsic, Andrea<br>
+10. Software Demo: MITK Diffusion. Hering, Jan<br>
+
+
     </div>
 
     <div class="container marketing">
@@ -113,25 +174,12 @@
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
-<p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Demo Submissions Open Until August 15, 2014</a></strong></p>
+          <strike><p><strong><a href="https://cmt.research.microsoft.com/IMIC2014">Online Demo Submissions Open Until August 15, 2014</a></strong></p>
 <p>Paper Submission Deadline: <strike>June 9</strike> June 12, 2014 </p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
-<p>Demo Submission Deadline: August 15, 2014</p>
+<p>Demo Submission Deadline: August 15, 2014</p></strike>
 <p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
-          <h3>Day of the Workshop</h3>
-          <p>7:00 - Coffee</p>
-          <p>8:10 - Welcome</p>
-          <p>8:15 - Ron’s Rules for Tools (Ron Kikinis)</p>
-          <p>9:00 - Presentations Block #1 (4 talks, 15 minutes each)</p>
-          <p>10:00 - Coffee and Demos</p>
-          <p>11:00 - Presentations Block #2 (4 talks, 15 minutes each)</p>
-          <p>12:00 - Lunch</p>
-          <p>1:00 - Allen’s Mathematical Theory of Interaction (Allen Tannenbaum)</p>
-          <p>2:00 - Presentations Block #3 (4 talks, 15 minutes each)</p>
-          <p>3:00 - Coffee and Demos</p>
-          <p>4:30 - Presentation of Awards</p>
-          <p>5:00 - Adjurn</p>
 
         </div><!-- /.col-lg-4 -->
 
@@ -165,39 +213,6 @@
       <section id="main_content" class="inner">
         <h3>
 
-<h3><a name="oral" class="anchor" href="#oral"><span class="octicon octicon-link"></span></a>Oral Presentations</h3>
-
-<ul>
-
-  <li><b>A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem.  </b>Heckel, Frank</li>
-
-  <li><b>Tracking by Assignment Facilitates Data Curation.</b> Jug, Florian</li>
-
-  <li><b>An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut.</b>  Zhu, Liangjia</li>
-
-  <li><b>informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop.</b> Gurari, Danna</li>
-
-  <li><b>mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian</b> (<a href=http://tipix.csail.mit.edu/>online demo</a>)</li>
-
-  <li><b>An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh</b></li>
-
-  <li><b>How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours.  </b>Gurari, Danna</li>
-
-  <li><b>Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. </b>Urschler, Martin</li>
-
-  <li><b>An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). </b>Fetzer, Andreas (<a href=http://mitk.org/>available in MITK Workbench</a>)</li>
-
-  <li><b>Probabilistic model for interactive 3D segmentation.</b> Hershkovich, Tsachi</li>
-
-  <li><b>Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation.</b> Xue, Wenzhe</li>
-
-  <li><b>A Control Framework for Interactive Deformable Image Registration.</b> Kolesov, Ivan</li>
-
-</ul>
-
-
-        <h3>
-
 <h3><a name="organizers" class="anchor" href="#organizers"><span class="octicon octicon-link"></span></a>Organizing Committee</h3>
 
 <ul>
@@ -213,6 +228,12 @@
 
 </ul>
 
+<h3><a name="referees" class="anchor" href="#referees"><span class="octicon octicon-link"></span></a>On-site referees for best paper prize</h3>
+<ul>
+<li>Koen Van Leemput</li>
+<li>Andrey Fedorov</li>
+<li>Steve Pieper</li>
+</ul>
 
 <h3><a name="programcommittee" class="anchor" href="#programcommittee"><span class="octicon octicon-link"></span></a>Program Committee</h3>
 <ul>
@@ -235,6 +256,7 @@
 <li>Peter	 Savadjiev</li>
 <li>Lichao Wang</li>
 <li>Tina Kapur</li>
+<li>Andrey Fedorov</li>
 </ul>
 
 <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper Submission Process</h3>
@@ -253,7 +275,7 @@ accepted submissions will set a precedent that can be expected to be widely disc
 <h6>Paper format</h6>
 <ul>
 
-<li> Papers should be formatted using the 
+<li> Papers should be formatted using the
 <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" title="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" rel="nofollow"><font color="#0066cc">LNCS style files</font></a>. </li>
 
 <li> Papers should have 4-8 pages, but shorter papers accompanied by videos or live demonstrations will also be given full consideration.</li>
