Add floorplan link

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -99,7 +99,7 @@
 
      <h3>Workshop Location</h3>
 
-     Room 217 of the <a href=http://www.theconfcenter.hms.harvard.edu/directions/>Martin Conference Center at Harvard Medical School</a>.
+     Room 217 of the <a href=http://www.theconfcenter.hms.harvard.edu/directions/>Martin Conference Center at Harvard Medical School</a>.  <a href=Sep14MICCAI.ppt.pdf>Room floorplan.</a>
 
      <h3>Workshop Schedule</h3>
 
