Add registration information

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -55,6 +55,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="#organizers">People</a></li>
+                    <li><a href="#registration">Registration</a></li>
                     <li><a href="#oral">Oral Presentations</a></li>
                     <li><a href="#why-imic">Why IMIC</a></li>
                     <li class="divider"></li>
@@ -97,9 +98,16 @@
 
           <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various demo tools on different data.</p>
 
+          <h3> <a name="registration" class="anchor" href=#registration></a>Important: Registration Information</h3>
+     <p>All attendees and presenters must be registered with MICCAI in order to get access to the workshop.  <strong>Online registration is no longer available</strong>, but attendees can register on the morning of the event starting at 7:00am.
+
+     <p>Please be aware that the registration desk is at MIT in Cambridge while the workshop is at Harvard Medical School in Boston <a href=https://www.google.com/maps/dir/Kresge+Auditorium,+Cambridge,+MA+02139/Joseph+B.+Martin+Conference+Center,+Boston,+MA+02115/@42.3479334,-71.1089918,15z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89e37a007a7dcf4b:0xe0e6ffb604055153!2m2!1d-71.095042!2d42.3581287!1m5!1m1!1s0x89e3798b7939765f:0x34fec070756819e2!2m2!1d-71.103188!2d42.33821!3e0>(about 10 minutes by car)</a>.
+
+     <p>If you have not already registered, please refer to <a href=http://miccai2014.org/registration.html>the MICCAI registration page</a> for details about same-day registration.
+
      <h3>Workshop Location</h3>
 
-     Room 217 of the <a href=http://www.theconfcenter.hms.harvard.edu/directions/>Martin Conference Center at Harvard Medical School</a>.  <a href=Sep14MICCAI.ppt.pdf>Room floorplan.</a>
+     <p>Room 217 of the <a href=http://www.theconfcenter.hms.harvard.edu/directions/>Martin Conference Center at Harvard Medical School</a>.  <a href=Sep14MICCAI.ppt.pdf>Room floorplan.</a>
 
      <h3>Workshop Schedule</h3>
 
@@ -179,7 +187,7 @@
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
 <p>Demo Submission Deadline: August 15, 2014</p></strike>
-<p>Workshop: Sunday, September 14, 2014 (location TBA)</p>
+<p>Workshop: Sunday, September 14, 2014</p>
 
         </div><!-- /.col-lg-4 -->
 
