Add schedule info and internal links

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -50,6 +50,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
+                <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#submission">Submission</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <b class="caret"></b></a>
@@ -109,10 +110,25 @@
 
      <p>Room 217 of the <a href=http://www.theconfcenter.hms.harvard.edu/directions/>Martin Conference Center at Harvard Medical School</a>.  <a href=Sep14MICCAI.ppt.pdf>Room floorplan.</a>
 
-     <h3>Workshop Schedule</h3>
+     <h3><a name="schedule"></a>Workshop Schedule</h3>
 
 
-     <h4>Oral Session I : Microscopy imaging, Cell tracking, Segmentation</h4>
+<ul>
+  <li>7:00 Coffee</li>
+  <li>8:00 Welcome</li>
+  <li>8:15 Ron’s Rules for Tools (Ron Kikinis)</li>
+  <li>9:00 <a href=#oral1>Presentations Block #1</a> (4 talks, 15 minutes each)</li>
+  <li>10:00 <a href=#demo1>Coffee and Demo Parts I and II (30 minutes per group)</a></li>
+  <li>11:00 <a href=#oral2>Presentations Block #2</a> (4 talks, 15 minutes each)</li>
+  <li>12:00 Lunch</li>
+  <li>1:00 Allen’s Mathematical Theory of Interaction (Allen Tannenbaum)</li>
+  <li>2:00 <a href=#oral2>Presentations Block #3</a> (4 talks, 15 minutes each)</li>
+  <li>3:00 <a href=#demo1>Coffee and Demo Parts III and IV</a></li>
+  <li>4:30 Presentation of Awards</li>
+  <li>5:00 Adjourn</li>
+</ul>
+
+<h4><a name='oral1'></a>Oral Session I : Microscopy imaging, Cell tracking, Segmentation</h4>
 
      <i>Chairs: Tammy Riklin Raviv and Yi Gao</i><br>
 
@@ -121,7 +137,7 @@
      9:30-9:45 How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours. Gurari, Danna<br>
      9:45-10:00 An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). (<a href=http://mitk.org/>available in MITK Workbench</a>) Fetzer, Andreas<br>
 
-<h4>Oral Session II: Segmentation</h4>
+     <h4><a name='oral2'></a>Oral Session II: Segmentation</h4>
 
 <i>Chairs: Steve Pieper and Bjoern Menze</i><br><br>
 
@@ -130,7 +146,7 @@
 11:30-11:45 A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem. (<a href=http://www.mevis-research.de/~fheckel/IMIC2014/IMIC_Editing.html>movie</a>) Heckel, Frank<br>
 11:45-12:00 An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut. Zhu, Liangjia<br>
 
-<h4>Oral Session III : Visualization/Registration/Denoising</h4>
+<h4><a name='oral3'></a>Oral Session III : Visualization/Registration/Denoising</h4>
 
 <i>Chairs: Allen Tannenbaum and Hans-Peter Meinzer</i><br>
 
@@ -139,7 +155,7 @@
 14:30-15:00 An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh<br>
 14:45-15:00  mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian (<a href=http://tipix.csail.mit.edu/>online demo</a>)<br>
 
-<h4>Demo Session I: 10:00-11:00</h4>
+<h4><a name='demo1'></a>Demo Session I: 10:00-11:00</h4>
 
 <h5>Part I 10:00-10:30</h5>
 1. An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh<br>
@@ -154,7 +170,7 @@
 8. Exploration and validation of time-lapse microscopy images using CellProfiler Tracer Bray, Mark-Anthony<br>
 9. Image-based Interactive Assessment and Therapy Simulation of Aortic Coarctation Hennemuth, Anja<br>
 
-<h4>Demo Session II: 15:00-16:00</h4>
+<h4><a name='demo1'></a>Demo Session II: 15:00-16:00</h4>
 
 <h5>Part III: 15:00-15:30</h5>
 1. mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian<br>
