mipiX -> tipiX per Adrian's request

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -153,7 +153,7 @@
 14:00-14:15 Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. Urschler, Martin<br>
 14:15-14:30 A Control Framework for Interactive Deformable Image Registration. Kolesov, Ivan<br>
 14:30-15:00 An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh<br>
-14:45-15:00  mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian (<a href=http://tipix.csail.mit.edu/>online demo</a>)<br>
+14:45-15:00  tipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian (<a href=http://tipix.csail.mit.edu/>online demo</a>)<br>
 
 <h4><a name='demo1'></a>Demo Session I: 10:00-11:00</h4>
 
@@ -173,7 +173,7 @@
 <h4><a name='demo1'></a>Demo Session II: 15:00-16:00</h4>
 
 <h5>Part III: 15:00-15:30</h5>
-1. mipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian<br>
+1. tipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian<br>
 2. A Control Framework for Interactive Deformable Image Registration. Kolesov, Ivan<br>
 3. Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. Urschler, Martin<br>
 4. Probabilistic model for interactive 3D segmentation. Hershkovich, Tsachi<br>
