Announce close of workshop and add Ron's link.

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -93,18 +93,11 @@
           <!-- <img src="../images/imic2014.png"> -->
           <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
           <h2 id="project_tagline">Part of <a href=http://miccai2014.org/ target="_blank">MICCAI 2014:</a> September 14, 2014 - Boston, USA</h2>
-          <p>The Interactive Medical Image Computing (IMIC) Workshop is to be held in Boston, on Sunday September 14, in conjunction with MICCAI 2014.</p>
+          <p><strong>The Interactive Medical Image Computing (IMIC) Workshop was held in Boston, on Sunday September 14, in conjunction with MICCAI 2014.  This page includes summary information and links to workshop content.  We look forward to futher events on these topics.</strong></p>
 
           <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
 
           <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various demo tools on different data.</p>
-
-          <h3> <a name="registration" class="anchor" href=#registration></a>Important: Registration Information</h3>
-     <p>All attendees and presenters must be registered with MICCAI in order to get access to the workshop.  <strong>Online registration is no longer available</strong>, but attendees can register on the morning of the event starting at 7:00am.
-
-     <p>Please be aware that the registration desk is at MIT in Cambridge while the workshop is at Harvard Medical School in Boston <a href=https://www.google.com/maps/dir/Kresge+Auditorium,+Cambridge,+MA+02139/Joseph+B.+Martin+Conference+Center,+Boston,+MA+02115/@42.3479334,-71.1089918,15z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89e37a007a7dcf4b:0xe0e6ffb604055153!2m2!1d-71.095042!2d42.3581287!1m5!1m1!1s0x89e3798b7939765f:0x34fec070756819e2!2m2!1d-71.103188!2d42.33821!3e0>(about 10 minutes by car)</a>.
-
-     <p>If you have not already registered, please refer to <a href=http://miccai2014.org/registration.html>the MICCAI registration page</a> for details about same-day registration.
 
      <h3>Workshop Location</h3>
 
@@ -116,7 +109,7 @@
 <ul>
   <li>7:00 Coffee</li>
   <li>8:00 Welcome</li>
-  <li>8:15 Ron’s Rules for Tools (Ron Kikinis)</li>
+  <li>8:15 <a href=http://www.slicer.org/slicerWiki/index.php/Documentation-Rons-Rules-For-Tools>Ron’s Rules for Tools</a> (Ron Kikinis, <a href=http://www.slicer.org/slicerWiki/images/c/c1/2014-09-13b-Rules_for_tools.pdf>Slides</a>)</li>
   <li>9:00 <a href=#oral1>Presentations Block #1</a> (4 talks, 15 minutes each)</li>
   <li>10:00 <a href=#demo1>Coffee and Demo Parts I and II (30 minutes per group)</a></li>
   <li>11:00 <a href=#oral2>Presentations Block #2</a> (4 talks, 15 minutes each)</li>
@@ -202,8 +195,8 @@
 <p>Paper Submission Deadline: <strike>June 9</strike> June 12, 2014 </p>
 <p>Acceptance Notification: July 5, 2014</p>
 <p>Camera Ready Manuscript Required: July 11, 2014</p>
-<p>Demo Submission Deadline: August 15, 2014</p></strike>
-<p>Workshop: Sunday, September 14, 2014</p>
+<p>Demo Submission Deadline: August 15, 2014</p>
+<p>Workshop: Sunday, September 14, 2014</p></strike>
 
         </div><!-- /.col-lg-4 -->
 
