Add Creatis link

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -175,7 +175,7 @@
 <h5>Part IV: 15:30-16:00</h5>
 6. Informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop. Gurari, Danna<br>
 7. Cardiac Image Modeller Right and Left Ventricle Gilbert, Kathleen<br>
-8. inTag, CMRSegToosl and C-DTI. A suite of tools for analysing cardiac MR images. Romero R., William A.<br>
+8. <a href=https://www.creatis.insa-lyon.fr/osirix-dev/2014-IMIC-DEMO.html>inTag, CMRSegToosl and C-DTI. A suite of tools for analysing cardiac MR images.</a> Romero R., William A.<br>
 9. MIRAN - An Interactive Image Segmentation and Meshing Environment Borsic, Andrea<br>
 10. Software Demo: MITK Diffusion. Hering, Jan<br>
 
