Add prize winners

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -103,6 +103,30 @@
 
      <p>Room 217 of the <a href=http://www.theconfcenter.hms.harvard.edu/directions/>Martin Conference Center at Harvard Medical School</a>.  <a href=Sep14MICCAI.ppt.pdf>Room floorplan.</a>
 
+     <h3>Best Paper Prizes</h3>
+     <p>Out of a very strong field of contributions, the following efforts earned special recognition and shared the $300 prize money based on their scientific merit.
+
+     <p>1. Best paper award based on the off-site reviews:
+"Tracking by Assignment Facilitates Data Curation"
+Florian Jug (MPI-CBG)
+Tobias Pietzsch (MPI-CBG)
+Dagmar Kainmüller (MPI-CBG)
+Gene Myers (MPI-CBG)
+
+<p>2. Best paper award for impact and usability:
+"tipiX: Rapid Visualization of Large Image Collections"
+Adrian Dalca (MIT)
+Ramesh Sridharan (MIT)
+Rost Natalia (MGH)
+Polina Golland (MIT)
+
+<p>3. Best paper award for innovative idea:
+"How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours"
+Danna Gurari (Boston University)
+Diane Theriault (Boston University)
+Mehrnoosh Sameki (Boston University)
+Margrit Betke (Boston University)
+
      <h3><a name="schedule"></a>Workshop Schedule</h3>
 
 
