Adds Frank's slides

--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -154,13 +154,13 @@ Margrit Betke (Boston University)
      9:30-9:45 How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours. Gurari, Danna<br>
      9:45-10:00 An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). (<a href=http://mitk.org/>available in MITK Workbench</a>) Fetzer, Andreas<br>
 
-     <h4><a name='oral2'></a>Oral Session II: Segmentation</h4>
+<h4><a name='oral2'></a>Oral Session II: Segmentation</h4>
 
 <i>Chairs: Steve Pieper and Bjoern Menze</i><br><br>
 
 11:00-11:15 Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation. Xue, Wenzhe<br>
 11:15-11:30 Probabilistic model for interactive 3D segmentation. Hershkovich, Tsachi<br>
-11:30-11:45 A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem. (<a href=http://www.mevis-research.de/~fheckel/IMIC2014/IMIC_Editing.html>movie</a>) Heckel, Frank<br>
+11:30-11:45 A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem. (<a href=http://www.mevis-research.de/~fheckel/IMIC2014/IMIC_Editing.html>movie</a>, <a href=http://www.mevis-research.de/~fheckel/publications/Heckel2014a_IMIC_talk.pptx>slides</a>) Heckel, Frank<br>
 11:45-12:00 An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut. Zhu, Liangjia<br>
 
 <h4><a name='oral3'></a>Oral Session III : Visualization/Registration/Denoising</h4>
