--- a/imic2014/index.html
+++ b/imic2014/index.html
@@ -107,21 +107,21 @@
      <p>Out of a very strong field of contributions, the following efforts earned special recognition and shared the $300 prize money based on their scientific merit.
 
      <p>1. Best paper award based on the off-site reviews:
-"Tracking by Assignment Facilitates Data Curation"
+<a href=CameraReadyPapers/Paper%203/Jug_Interactive_IMIC2014.pdf>"Tracking by Assignment Facilitates Data Curation"</a>
 Florian Jug (MPI-CBG)
 Tobias Pietzsch (MPI-CBG)
 Dagmar Kainmüller (MPI-CBG)
 Gene Myers (MPI-CBG)
 
 <p>2. Best paper award for impact and usability:
-"tipiX: Rapid Visualization of Large Image Collections"
+<a href=CameraReadyPapers/Paper%206/tipiX_0717_evening_final.pdf>"tipiX: Rapid Visualization of Large Image Collections"</a>
 Adrian Dalca (MIT)
 Ramesh Sridharan (MIT)
 Rost Natalia (MGH)
 Polina Golland (MIT)
 
 <p>3. Best paper award for innovative idea:
-"How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours"
+<a href=CameraReadyPapers/Paper%208/MICCAI_finalSubmission.pdf>"How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours"</a>
 Danna Gurari (Boston University)
 Diane Theriault (Boston University)
 Mehrnoosh Sameki (Boston University)
@@ -149,40 +149,41 @@ Margrit Betke (Boston University)
 
      <i>Chairs: Tammy Riklin Raviv and Yi Gao</i><br>
 
-     9:00-9:15 Tracking by Assignment Facilitates Data Curation. Jug, Florian<br>
-     9:15-9:30 Informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop. Gurari, Danna<br>
-     9:30-9:45 How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours. Gurari, Danna<br>
-     9:45-10:00 An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). (<a href=http://mitk.org/>available in MITK Workbench</a>) Fetzer, Andreas<br>
+     9:00-9:15 <a href=CameraReadyPapers/Paper%203/Jug_Interactive_IMIC2014.pdf>Tracking by Assignment Facilitates Data Curation</a> Jug, Florian<br>
+     9:15-9:30 <a href=CameraReadyPapers/Paper%205/miccai-finalSubmission.pdf>Informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop</a>. Gurari, Danna<br>
+     9:30-9:45 <a href=CameraReadyPapers/Paper%208/MICCAI_finalSubmission.pdf>How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours</a>. Gurari, Danna<br>
+     9:45-10:00 <a href=CameraReadyPapers/Paper%2010/2014-fetzer-miccai-imic.pdf>An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK)</a>(<a href=http://mitk.org/>available in MITK Workbench</a>). Fetzer, Andreas<br>
 
 <h4><a name='oral2'></a>Oral Session II: Segmentation</h4>
 
 <i>Chairs: Steve Pieper and Bjoern Menze</i><br><br>
 
-11:00-11:15 Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation. Xue, Wenzhe<br>
-11:15-11:30 Probabilistic model for interactive 3D segmentation. Hershkovich, Tsachi<br>
+11:00-11:15 <a href=CameraReadyPapers/Paper%2012/Xue_IMIC2014_CameraReady_Jul21.pdf>Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation</a>. Xue, Wenzhe<br>
+11:15-11:30 <a href=CameraReadyPapers/Paper%2011/Probabilistic model for interactive 3D segmentation_.pdf>Probabilistic model for interactive 3D segmentation</a>. Hershkovich, Tsachi<br>
 11:30-11:45 A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem. (<a href=http://www.mevis-research.de/~fheckel/IMIC2014/IMIC_Editing.html>movie</a>, <a href=http://www.mevis-research.de/~fheckel/publications/Heckel2014a_IMIC_talk.pptx>slides</a>) Heckel, Frank<br>
-11:45-12:00 An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut. Zhu, Liangjia<br>
+11:45-12:00 <a href=CameraReadyPapers/Paper%204/IMIC_ID4_FastGrowCut.pdf>An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut</a>. Zhu, Liangjia<br>
+
 
 <h4><a name='oral3'></a>Oral Session III : Visualization/Registration/Denoising</h4>
 
 <i>Chairs: Allen Tannenbaum and Hans-Peter Meinzer</i><br>
 
-14:00-14:15 Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. Urschler, Martin<br>
-14:15-14:30 A Control Framework for Interactive Deformable Image Registration. Kolesov, Ivan<br>
-14:30-15:00 An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh<br>
+14:00-14:15 <a href=CameraReadyPapers/Paper%209/final.pdf>Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications</a>. Urschler, Martin<br>
+14:15-14:30 <a href=CameraReadyPapers/Paper%2013/MICCAI2014_iAlign.pdf>A Control Framework for Interactive Deformable Image Registration</a>. Kolesov, Ivan<br>
+14:30-15:00 <a href=CameraReadyPapers/Paper%207/paper.pdf>An interactive visualization tool for Nipype medical imaging pipelines</a>. Sridharan, Ramesh<br>
 14:45-15:00  tipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian (<a href=http://tipix.csail.mit.edu/>online demo</a>)<br>
 
 <h4><a name='demo1'></a>Demo Session I: 10:00-11:00</h4>
 
 <h5>Part I 10:00-10:30</h5>
-1. An interactive visualization tool for Nipype medical imaging pipelines. Sridharan, Ramesh<br>
-2. Tracking by Assignment Facilitates Data Curation. Jug, Florian<br>
-3. How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours. Gurari, Danna<br>
-4. An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK). Fetzer, Andreas<br>
-5.Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation. Xue, Wenzhe<br>
+1. <a href=CameraReadyPapers/Paper%207/paper.pdf>An interactive visualization tool for Nipype medical imaging pipelines</a>. Sridharan, Ramesh<br>
+2. <a href=CameraReadyPapers/Paper%203/Jug_Interactive_IMIC2014.pdf>Tracking by Assignment Facilitates Data Curation</a>. Jug, Florian<br>
+3. <a href=CameraReadyPapers/Paper%208/MICCAI_finalSubmission.pdf>How to use level set methods to accurately find boundaries of cells in biomedical images? Evaluation of six methods paired with automated and crowdsourced initial contours</a>. Gurari, Danna<br>
+4. <a href=CameraReadyPapers/Paper%2010/2014-fetzer-miccai-imic.pdf>An interactive 3D segmentation for the Medical Imaging Interaction Toolkit (MITK)</a>. Fetzer, Andreas<br>
+5.<a href=CameraReadyPapers/Paper%2012/Xue_IMIC2014_CameraReady_Jul21.pdf>Intelligent Initialization and Interactivity: Optimizing Level Sets for T1-weighted White Matter Segmentation</a>. Xue, Wenzhe<br>
 
 <h5>Part II: 10:30-11:00</h5>
-6. A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem. Heckel, Frank<br>
+6. <a href=CameraReadyPapers/Paper%201/IMIC_Editing_final_2014-07-11.pdf>A Concept for the Application of a Hierarchical Image Subdivision to the Segmentation Editing Problem</a>. Heckel, Frank<br>
 7. Medical image navigation by gesture recognition for Leap Motion Thong, William*<br>
 8. Exploration and validation of time-lapse microscopy images using CellProfiler Tracer Bray, Mark-Anthony<br>
 9. Image-based Interactive Assessment and Therapy Simulation of Aortic Coarctation Hennemuth, Anja<br>
@@ -190,15 +191,15 @@ Margrit Betke (Boston University)
 <h4><a name='demo1'></a>Demo Session II: 15:00-16:00</h4>
 
 <h5>Part III: 15:00-15:30</h5>
-1. tipiX: Rapid Visualization of Large Image Collections. Dalca, Adrian<br>
-2. A Control Framework for Interactive Deformable Image Registration. Kolesov, Ivan<br>
-3. Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications. Urschler, Martin<br>
-4. Probabilistic model for interactive 3D segmentation. Hershkovich, Tsachi<br>
-5. An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut. Zhu, Liangjia<br>
+1. <a href=CameraReadyPapers/Paper%206/tipiX_0717_evening_final.pdf>tipiX: Rapid Visualization of Large Image Collections</a>. Dalca, Adrian<br>
+2. <a href=CameraReadyPapers/Paper%2013/MICCAI2014_iAlign.pdf>A Control Framework for Interactive Deformable Image Registration</a>. Kolesov, Ivan<br>
+3. <a href=CameraReadyPapers/Paper%209/final.pdf>Interactive 2D/3D Image Denoising and Segmentation Tool for Medical Applications</a>. Urschler, Martin<br>
+4. <a href=CameraReadyPapers/Paper%2011/Probabilistic model for interactive 3D segmentation_.pdf>Probabilistic model for interactive 3D segmentation</a>. Hershkovich, Tsachi<br>
+5. <a href=CameraReadyPapers/Paper%204/IMIC_ID4_FastGrowCut.pdf>An Effective Interactive Medical Image Segmentation Method Using Fast GrowCut</a>. Zhu, Liangjia<br>
 
 <h5>Part IV: 15:30-16:00</h5>
-6. Informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop. Gurari, Danna<br>
-7. Cardiac Image Modeller Right and Left Ventricle Gilbert, Kathleen<br>
+6. <a href=CameraReadyPapers/Paper%205/miccai-finalSubmission.pdf>Informed Segmentation: A Framework for Using Context to Select an Algorithm and a Case Study Using Humans in the Loop</a>. Gurari, Danna<br>
+7.  <a href=CameraReadyPapers/Demo20/Paper20.pdf>Cardiac Image Modeller Right and Left Ventricle</a>. Gilbert, Kathleen<br>
 8. <a href=https://www.creatis.insa-lyon.fr/osirix-dev/2014-IMIC-DEMO.html>inTag, CMRSegToosl and C-DTI. A suite of tools for analysing cardiac MR images.</a> Romero R., William A.<br>
 9. MIRAN - An Interactive Image Segmentation and Meshing Environment Borsic, Andrea<br>
 10. Software Demo: MITK Diffusion. Hering, Jan<br>
