Adds 2015 link and list of previous events

--- a/index.html
+++ b/index.html
@@ -27,12 +27,19 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-          We are the organization behind <a href="./imic2014/index.html">IMIC 2014</a>
+          We are the organization behind <a href="./imic2015/index.html">IMIC 2015</a>
         </h3>
         <p>Interactive computer systems are widely used in a range of medical applications.
         The Interactive Medical Organization's mission is to promote interchange of ideas
         and technologies related to promoting the creation and delivery of interactive
         systems that can improve health care.</p>
+        <h4>
+          Previous events:
+          <ul>
+          <li><a href="./imic2014/index.html">IMIC 2014</a></li>
+          </ul>
+          
+        </h4>
     </div>
 
 
