--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Copyright 2014 Interactive Medical Organization</p>
+        <p>Copyright 2014-2015 Interactive Medical Organization</p>
       </footer>
     </div>
 
