Add dates for imic2015

--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -119,8 +119,11 @@
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
-<p>Workshop: Friday, October 9, 2015</p></strike>
-
+<p>Submission Deadline: June 25, 2015 (note there will be <b>No Extensions</b>)</p>
+<p>Reviewer Deadline: July 16, 2015</p>
+<p>Author Notification: July 21, 2015</p>
+<p>Camera Ready Versions: August 1, 2015</p>
+<p>Workshop: Friday, October 9, 2015</p>
         </div><!-- /.col-lg-4 -->
 
         <div href="#topics" class="col-lg-4">
