--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -51,7 +51,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#submission"><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission</a></strong></a></li>
+                <li><a href="#submission">Submission</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -119,7 +119,7 @@
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
-<p><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission</a></strong> Deadline: June 25, 2015 (note there will be <b>No Extensions</b>)</p>
+<p><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Deadline: June 25, 2015</a></strong> (note there will be <b>No Extensions</b>)</p>
 <p>Reviewer Deadline: July 16, 2015</p>
 <p>Author Notification: July 21, 2015</p>
 <p>Camera Ready Versions: August 1, 2015</p>
@@ -175,7 +175,9 @@
 
 <h3><a name="programcommittee" class="anchor" href="#programcommittee"><span class="octicon octicon-link"></span></a>Program Committee</h3>
 
-<h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission</a></strong> Process</h3>
+<h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Process</a></strong></h3>
+
+<p></p><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission site: https://cmt3.research.microsoft.com/IMIC2015</a></strong></p>
 
 <p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
 Workshop presentations are expected to represent a cross section of the best available research in this area.
